<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:padding="10dp" >

    <Button
        android:id="@+id/buttonBilatu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/formBilatu" />

    <EditText
        android:id="@+id/iragazkia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/buttonBilatu"
        android:inputType="text" />

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonBilatu"
        android:layout_marginTop="15dp"
        android:stretchColumns="0,1,2" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center" >

            <ImageButton
                android:id="@+id/imageButtonEtxeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageButtonEtxeak"
                android:src="@drawable/ic_etxeak" />

            <ImageButton
                android:id="@+id/imageButtonLana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageButtonLana"
                android:src="@drawable/ic_lana" />

            <ImageButton
                android:id="@+id/imageButtonSalerosi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageButtonSalerosi"
                android:src="@drawable/ic_salerosi" />
        </TableRow>
        
		<TableRow
		    android:id="@+id/tableRow2"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="fill_horizontal|center"
		    android:layout_marginBottom="10dp"
		    android:gravity="center" >

			<TextView
			    android:id="@+id/etiketa1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:text="@string/imageButtonEtxeak" />
			
			<TextView
			    android:id="@+id/etiketa2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:text="@string/imageButtonLana" />
			
			<TextView
			    android:id="@+id/etiketa3"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:text="@string/imageButtonSalerosi" />

        </TableRow>        

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="true" >

            <ImageButton
                android:id="@+id/imageButtonPraktikak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageButtonPraktikak"
                android:src="@drawable/ic_praktikak" />

            <ImageButton
                android:id="@+id/imageButtonKotxeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageButtonKotxea"
                android:src="@drawable/ic_kotxeak" />

            <ImageButton
                android:id="@+id/imageButtonBidaiak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageButtonBidaiak"
                android:src="@drawable/ic_bidaiak" />
        </TableRow>
        
		<TableRow
		    android:id="@+id/tableRow4"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="fill_horizontal|center"
		    android:layout_marginBottom="10dp"
		    android:gravity="center" >

			<TextView
			    android:id="@+id/etiketa4"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:text="@string/imageButtonPraktikak" />
			
			<TextView
			    android:id="@+id/etiketa5"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:text="@string/imageButtonKotxea" />
			
			<TextView
			    android:id="@+id/etiketa6"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:text="@string/imageButtonBidaiak" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableLayout1"
        android:orientation="vertical"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/iragarkiBerria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iragarki_berri_botoia" />
    </LinearLayout>

</RelativeLayout>